--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 .App {
   text-align: center;
 }
@@ -21,12 +25,24 @@
   position: absolute;
   left: 0;
   top: 0;
-  opacity: 0.3;
+  opacity: 0.5;
   pointer-events: none;
   width: 100%;
   height: 100%;
   display: flex;
   flex-wrap: wrap;
+}
+
+.SolutionViewItem {
+  position: absolute;
+  display: flex;
+  flex-wrap: wrap;
+  transition: all ease 1000ms;
+}
+
+.SolutionViewCell {
+  width: 50px;
+  height: 50px;
 }
 
 .item {
@@ -80,10 +96,13 @@
   background: #f0f0f0;
   color: #333;
   cursor: pointer;
-  border: 2px solid transparent;
+}
+
+.SolutionItem:hover {
+  background: #ddd;
 }
 
 .SolutionItem.selected {
-  border: 2px solid blue;
-  box-sizing: border-box;
+  background: #07f;
+  color: #fff;
 }
